--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.4",
     "request": "^2.88.2"
   }
 }
